Fix login container spacing

--- a/frontend/src/app/routes/login/login.scss
+++ b/frontend/src/app/routes/login/login.scss
@@ -1,18 +1,20 @@
 .primary-container {
-  width: 88rem;
+  width: auto;
   height: auto;
   display: flex;
   flex-direction: row;
+  box-shadow:
+    0 0 8px var(--color-highlight),
+    0 0 16px var(--color-highlight);
 }
 
 .splash {
-  width: 66rem;
+  width: 44rem;
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     display: block;
-    transform: translateX(-1rem);
   }
 }
 
@@ -20,7 +22,6 @@
   width: 22rem;
   height: auto;
   background: var(--color-primary);
-  border-radius: 8px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -47,7 +48,7 @@
   .divider-title {
     background: none;
     color: var(--color-text);
-    font-weight: 600;
+    font-weight: 300;
     font-size: 2rem;
     left: -0.5rem;
   }
@@ -60,7 +61,7 @@
   }
   .button-container {
     width: 40%;
-    font-weight: 450;
+    font-weight: 20;
     height: 3rem;
     font-size: 1.4rem;
     background: var(--color-bg);
